--- a/src/NetArchTest.Rules/NetArchTest.Rules.csproj
+++ b/src/NetArchTest.Rules/NetArchTest.Rules.csproj
@@ -2,20 +2,22 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.2</Version>
-    <Authors>Ben Morris</Authors>
-    <Product>NetArchTest</Product>
+    <Version>1.3.3</Version>
+    <Authors>NeVeSpl</Authors>
+    <Product>NetArchTest.eNhancedEdition </Product>
     <Description>A fluent API for .Net Standard that can enforce architectural rules in unit tests.</Description>
-    <Copyright>Copyright (c) 2021 Ben Morris</Copyright>
-    <PackageLicense>https://github.com/BenMorris/NetArchTest/blob/master/LICENSE</PackageLicense>
-    <PackageProjectUrl>https://www.ben-morris.com/writing-archunit-style-tests-for-net-and-c-for-self-testing-architectures/</PackageProjectUrl>
-    <PackageIcon>bm-nuget-icon.png</PackageIcon>
-    <RepositoryUrl>https://github.com/BenMorris/NetArchTest</RepositoryUrl>
+    <Copyright>(c) NetArchTest.eNhancedEdition</Copyright>
+    <PackageLicense>https://github.com/NeVeSpl/NetArchTest.eNhancedEdition/blob/master/LICENSE</PackageLicense>
+    <PackageProjectUrl>https://github.com/NeVeSpl/NetArchTest.eNhancedEdition</PackageProjectUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <RepositoryUrl>https://github.com/NeVeSpl/NetArchTest.eNhancedEdition</RepositoryUrl>
     <PackageTags>test architecture dependencies archtest</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AssemblyVersion>1.3.1.0</AssemblyVersion>
-    <FileVersion>1.3.1.0</FileVersion>
+    <AssemblyVersion>1.3.3.0</AssemblyVersion>
+    <FileVersion>1.3.3.0</FileVersion>
+    <PackageId>NetArchTest.eNhancedEdition </PackageId>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,7 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="bm-nuget-icon.png" Pack="true" PackagePath="" />
+    <None Update="icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
