--- a/samples/NetArchTest.SampleRules/NetArchTest.SampleRules.csproj
+++ b/samples/NetArchTest.SampleRules/NetArchTest.SampleRules.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\NetArchTest.Rules\NetArchTest.Rules.csproj" />
+    <ProjectReference Include="..\..\src\NetArchTest.Rules\NetArchTest.csproj" />
     <ProjectReference Include="..\NetArchTest.SampleLibrary\NetArchTest.SampleLibrary.csproj" />
   </ItemGroup>
 
