--- a/test/NetArchTest.Rules.UnitTests/NetArchTest.UnitTests.csproj
+++ b/test/NetArchTest.Rules.UnitTests/NetArchTest.UnitTests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\NetArchTest.Rules\NetArchTest.Rules.csproj" />
+    <ProjectReference Include="..\..\src\NetArchTest.Rules\NetArchTest.csproj" />
     <ProjectReference Include="..\NetArchTest.CrossAssemblyTest.B\NetArchTest.CrossAssemblyTest.B.csproj" />
     <ProjectReference Include="..\NetArchTest.TestStructure\NetArchTest.TestStructure.csproj" />
   </ItemGroup>
