--- a/src/NetArchTest.Rules/NetArchTest.csproj
+++ b/src/NetArchTest.Rules/NetArchTest.csproj
@@ -5,7 +5,7 @@
     <Version>1.3.4</Version>
     <Authors>NeVeSpl</Authors>
     <Product>NetArchTest.eNhancedEdition </Product>
-    <Description>A fluent API for .Net Standard that can enforce architectural rules in unit tests.</Description>
+    <Description>A fluent API for .Net Standard that can enforce architectural rules in unit tests. Improved version, built upon NetArchTest.Rules v1.3.2.</Description>
     <Copyright>(c) NetArchTest.eNhancedEdition</Copyright>
     <PackageLicense>https://github.com/NeVeSpl/NetArchTest.eNhancedEdition/blob/master/LICENSE</PackageLicense>
     <PackageProjectUrl>https://github.com/NeVeSpl/NetArchTest.eNhancedEdition</PackageProjectUrl>
