--- a/.github/workflows/net-workflow.yml
+++ b/.github/workflows/net-workflow.yml
@@ -15,10 +15,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     
-    - name: Setup .NET 6.0
+    - name: Setup .NET 
       uses: actions/setup-dotnet@v3      
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: | 
+            3.1.x
+            6.0.x      
         
     - name: Restore dependencies
       run: dotnet restore
