BenMorris/NetArchTest#131 - Add support for all access modifiers: public, internal, private, protected, private protected, protected internal

--- a/test/NetArchTest.TestStructure/NetArchTest.TestStructure.csproj
+++ b/test/NetArchTest.TestStructure/NetArchTest.TestStructure.csproj
@@ -9,5 +9,11 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>false</Optimize>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Scope\**" />
+    <EmbeddedResource Remove="Scope\**" />
+    <None Remove="Scope\**" />
+  </ItemGroup>
   
 </Project>
