--- a/src/NetArchTest.Rules/NetArchTest.csproj
+++ b/src/NetArchTest.Rules/NetArchTest.csproj
@@ -18,6 +18,7 @@
     <FileVersion>1.3.7.0</FileVersion>
     <PackageId>NetArchTest.eNhancedEdition </PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+	  <LangVersion>10</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
