--- a/test/NetArchTest.Rules.UnitTests/NetArchTest.UnitTests.csproj
+++ b/test/NetArchTest.Rules.UnitTests/NetArchTest.UnitTests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
+	  <LangVersion>10</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
