handle open generic type passed as parameter to ImplementInterface

--- a/samples/SampleApp.BuildingBlocks/SampleApp.BuildingBlocks.csproj
+++ b/samples/SampleApp.BuildingBlocks/SampleApp.BuildingBlocks.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Domain\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
