--- a/samples/SampleApp.ModuleOmega/SampleApp.ModuleOmega.csproj
+++ b/samples/SampleApp.ModuleOmega/SampleApp.ModuleOmega.csproj
@@ -7,14 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="App\" />
-    <Folder Include="Domain\" />
     <Folder Include="Infrastructure\" />
-    <Folder Include="Persistence\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SampleApp.BuildingBlocks\SampleApp.BuildingBlocks.csproj" />
   </ItemGroup>
 
 </Project>
