BenMorris/NetArchTest#153 - Please strong name your library

--- a/tests/NetArchTest.Rules.UnitTests/NetArchTest.UnitTests.csproj
+++ b/tests/NetArchTest.Rules.UnitTests/NetArchTest.UnitTests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
 	  <LangVersion>12</LangVersion>
+	  <SignAssembly>True</SignAssembly>
+	  <AssemblyOriginatorKeyFile>xKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
