--- a/sources/NetArchTest/NetArchTest.csproj
+++ b/sources/NetArchTest/NetArchTest.csproj
@@ -18,6 +18,8 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <LangVersion>11</LangVersion>
 	  <PackageReadmeFile>README.md</PackageReadmeFile>
+	  <SignAssembly>False</SignAssembly>
+	  <AssemblyOriginatorKeyFile>xKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
