--- a/sources/NetArchTest/NetArchTest.csproj
+++ b/sources/NetArchTest/NetArchTest.csproj
@@ -18,7 +18,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <LangVersion>11</LangVersion>
 	  <PackageReadmeFile>README.md</PackageReadmeFile>
-	  <SignAssembly>False</SignAssembly>
+	  <SignAssembly>True</SignAssembly>
 	  <AssemblyOriginatorKeyFile>xKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
